Tue Nov 25 15:20:59 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Help file updates.  Affected files in irssi/src/docs/help/in/.

Wed Nov 23 20:51:21 CET 2003  Patrik Weiskircher <pat@icore.at>

	* Fixed channel messages across cells. Affected file 
	  silcd/packet_send.c

Wed Nov 12 11:34:56 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Fixed file transmission accepting in client library to not
	  start the negotiation if user hasn't accepted the transfer,
	  instead create new session for resent transfer.  Affected
	  file lib/silcclient/client_ftp.c.

	* Show the session ID in the file transmision list.  Remove
	  session from list that failed to transfer.  Switch the current
	  session automatically after transmission, and in errors, to new
	  session if other sessions exists in the transfer list.  Affected
	  files are irssi/src/silc/core/silc-servers.c,
	  irssi/src/fe-common/silc/modfule-formats.c.

Mon Nov 10 14:41:40 CET 2003  Jochen Eisinger <jochen@penguin-breeder.org>

	* Fixed MIME header parsing for the hopefully last time.  Affected
	  file lib/silcutil/silcstrutil.c

Mon Nov 10 13:03:46 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Rewrote the PKCS#1 routines.  Added lib/silccrypt/silcpkcs1.[ch].

	* The SILC RNG is now gauranteed to return non-zero random
	  values.  Affected files are lib/silccrypt/silcrng.[ch].

Sun Nov  9 20:44:56 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Fixed nickname formatting when changing only case of the
	  nickname.  Affected file lib/silcclient/idlist.c.

Sun Nov  9 19:33:59 CET 2003  Jochen Eisinger <jochen@penguin-breeder.org>

	* Fixed a memory leak and incorrect printing of the "appears as"
	  message.  Affected file irssi/src/silc/core/client_ops.c

Sun Nov  9 17:45:11 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Added CRT (Chinese Remainder Theorem) supported RSA
	  private keys and private key operations.  This significantly