@@ -1,10 +1,21 @@
+Fri Nov 28 19:13:21 EET 2003  Pekka Riikonen <priikone@silcnet.org>
+
+	* Changed the SILC_LOG_* macros to not be empty if SILC_DEBUG
+	  is not defined.  They can now be safely used in if-statements
+	  without braces.  Affected file lib/silcutil/silclog.h.
+
+	* Added the checks for backup closing connection due to error
+	  (local or remote) and thus not allow the resuming to occur
+	  in reconnect.  Affected files are silcd/packet_send.c
+	  and server.c.
+
 Tue Nov 25 15:20:59 EET 2003  Pekka Riikonen <priikone@silcnet.org>
 
 	* Help file updates.  Affected files in irssi/src/docs/help/in/.
 
 Wed Nov 23 20:51:21 CET 2003  Patrik Weiskircher <pat@icore.at>
 
-	* Fixed channel messages across cells. Affected file 
+	* Fixed channel messages across cells. Affected file
 	  silcd/packet_send.c
 
 Wed Nov 12 11:34:56 EET 2003  Pekka Riikonen <priikone@silcnet.org>
